# fota-secure

./: .gitignore  LICENSE  README.md
.github/workflows/: README.md  ci.yml
consumer/: CMakeLists.txt  README.md
consumer/src/: config.h  fcrypto.c  fcrypto.h  header.c  header.h  installer.c  installer.h  main.c  version.c  version.h
consumer/tests/: generate_fcrypto_fixtures.py  generate_installer_fixtures.py  test_fcrypto.c  test_header.c  test_installer.c  test_version.c
docs/: ARCHITECTURE.md  FORMAT_SPEC.md  TASKS.md  THREAT_MODEL.md
keygen/: README.md  generate_keys.py
packager/: README.md  pyproject.toml
packager/fota_secure/: blob.py  cli.py  crypto.py  manifest.py  tarball.py
packager/tests/: conftest.py  test_blob.py  test_crypto.py  test_manifest.py  test_tarball.py
tests/: README.md  generate_integration_fixtures.py  integration_test.sh
