[project]
name = "fota-secure-packager"
version = "0.1.0"
description = "Signs and encrypts firmware update packages for fota-secure"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41",
]

[project.optional-dependencies]
dev = ["pytest>=7", "black>=24"]

[project.scripts]
fota-secure-pack = "fota_secure.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fota_secure*"]
